# cuav

./: .gitignore  .travis.yml  INSTALL.txt  Makefile  README.md  README.txt  appveyor.yml  fg_ground.sh  guess_dotfile.sh  lens.py  post_install.sh  requirements.txt  setup.py  wp-search.txt
camera/: .gitignore  Makefile  calibrate.py  cam_params.py  camera.py  capture_images.c  capture_v4l  capture_v4l.c  chameleon.c  chameleon.h  chameleon_py.c  chameleon_twin.c  chameleon_twin16.c  chameleon_twin8.c  chameleon_util.c  chameleon_util.h  debayer.py  edges.py  fake_chameleon.py  fiximages.py  highest.py  joepos.py  markimages.py  planepos.py  py_capture.py  py_scanner.py  py_viewer.py  scantest.py  speedtest.py  threshold.py  util.py
capturescripts/: clear_images.sh  mavlog.sh
capturescripts/RasPi/: CMakeLists.txt  Makefile  README.txt  RaspiCamControl.c  RaspiCamControl.h  RaspiTex.c  RaspiTex.h  autostart_rpi_capture.sh  bayer_to_png.sh  capture.sh  clear_images.sh  cuav_util.c  cuav_util.h  cuavraw  cuavraw.c  datadownload.py  dataupload.py  joeenter.py  jpg_to_bayer.sh  mavlog.sh  rpi_raw_jpg.c  rpi_raw_png.c  rpi_to_pgm.c  start_rpi_capture.sh  stop.sh
cuav/: __init__.py
data/: CMAC-fence.txt  chameleon1_arecont0.json  cmac.txt  way.txt
image/: BlobExtractor.cc  BlobExtractor.h  Makefile  blobtest.cc  debayer.c  debayer.h  hgram_scanner.c  hist.py  histogram.c  histogram.h  histtest.cc  image_inlines.h  image_utils.c  imageutil.c  imageutil.h  pgm_io.c  pgm_io.h  scanner.c  setup.py
lib/: OBC_search.txt  block_xmit.py  cuav_joe.py  cuav_missiongenerator.py  (+6 more)
(+399 files in other folders)
